Arrumando erros de relacionamento
