# app/models/logModel.py
@@ -1,4 +1,4 @@
-from sqlalchemy import Column, Integer, String, Boolean, ForeignKey
+from sqlalchemy import Column, DateTime, Integer, String, Boolean, ForeignKey, func
 from app.database import Base
 from sqlalchemy.orm import relationship
 
@@ -11,5 +11,7 @@ class Logger(Base):
     user_id = Column(Integer, ForeignKey('users.id'), nullable=False)
     entity = Column(String, nullable=False)
     data = Column(String, nullable=False)
-    
+    created_at = Column(DateTime(timezone=True), server_default=func.now())
+    updated_at = Column(DateTime(timezone=True), server_default=func.now(), onupdate=func.now())
+
     user = relationship("User", foreign_keys="Logger.user_id", lazy="joined")
