# app/models/permissionsModel.py
@@ -1,4 +1,4 @@
-from sqlalchemy import Column, Integer, String, Boolean, ForeignKey
+from sqlalchemy import Column, DateTime, Integer, String, Boolean, ForeignKey, func
 from sqlalchemy.orm import relationship
 from app.database import Base
 
@@ -13,5 +13,7 @@ class Permissions(Base):
     can_update = Column(Boolean, default=False)
     can_create = Column(Boolean, default=False)
     profile_id = Column(Integer, ForeignKey('user_profile.id'), nullable=False)
+    created_at = Column(DateTime(timezone=True), server_default=func.now())
+    updated_at = Column(DateTime(timezone=True), server_default=func.now(), onupdate=func.now())
 
     profile = relationship("UserProfile", back_populates="permissions")
