# app/schemas/permissionsSchema.py
@@ -1,3 +1,4 @@
+from datetime import datetime
 from pydantic import BaseModel
 
 
@@ -16,6 +17,8 @@ class PermissionsCreate(PermissionsBase):
 
 class Permissions(PermissionsBase):
     id: int
+    created_at: datetime
+    updated_at: datetime
 
     class Config:
         from_attributes = True
